--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/node": "^14.11.1",
     "@types/polka": "^0.5.1",
     "rollup": "^2.3.4",
+    "rollup-plugin-glslify": "^1.2.0",
     "rollup-plugin-svelte": "^6.0.0",
     "rollup-plugin-terser": "^7.0.0",
     "sapper": "^0.28.0",
